# datapipe

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  PUBLISH.md  README.md  conanfile.py  datapipe.pc.in
.github/workflows/: ci.yml  clang-ci.yml  release.yml
cmake/: aarch64-linux-gnu-clang.cmake  aarch64-linux-gnu.cmake  riscv64-linux-gnu-clang.cmake  riscv64-linux-gnu.cmake  x86_64-linux-gnu-clang.cmake  x86_64-linux-gnu.cmake
docker/aarch64/: Dockerfile
docker/riscv64/: Dockerfile
docker/x86_64/: Dockerfile
docs/: Doxyfile
include/datapipe/: buffer.h  codec.h  core.h  datapipe.h  platform.h
ports/datapipe/: portfile.cmake  vcpkg.json
scripts/: build.sh
src/buffer/: CMakeLists.txt  buffer.c
src/codec/: CMakeLists.txt  codec.c
src/core/: CMakeLists.txt  core.c  datapipe.c
src/platform/: CMakeLists.txt  platform.c
tests/: CMakeLists.txt  test_buffer.c  test_codec.c  test_core.c  test_platform.c
